[package]
name = "rust-monty-parallel"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
subtle = "2.4"

# Rayon is optional and used when the "parallel" feature is enabled.
rayon = { version = "1.6", optional = true }

[features]
parallel = ["rayon"]
default = []
